assets/styles/main.sass
$primaryColor: #67caac
$darkgrey: #373737
$lightgrey: #f9f9f9
$beige: #EEEBE5

// BREAKPOINTS like Bootstrap
$breakPointSM: 576px
$breakPointMD: 768px
$breakPointLG: 992px
$breakPointXL: 1200px
$breakPointXXL: 1400px

@font-face
    font-family: 'Mainfont'
    src: url('@/assets/fonts/montserrat/Montserrat-Light.otf') format("opentype")
    font-weight: normal

@font-face
    font-family: 'Mainfont-Bold'
    src: url('@/assets/fonts/montserrat/Montserrat-Medium.otf') format("opentype")
    font-weight: normal

@font-face
    font-family: 'Comfortaa'
    src: url('@/assets/fonts/Comfortaa-Light.ttf') format("truetype")
    font-weight: normal

@font-face
    font-family: 'Comfortaa-bold'
    src: url('@/assets/fonts/Comfortaa-Bold.ttf') format("truetype")
    font-weight: normal

@font-face
    font-family: 'Typewriter'
    src: url('@/assets/fonts/JMH_Typewriter.ttf') format("truetype")
    font-weight: normal

$fontSizeRoot: 18px
$fontSizeLarge: calc(1.4rem + 1.2vw)
$fontSizeMedium: calc(1.2rem + .8vw)
$fontSizeNormal: 1.2rem
$fontSizeSmall: calc(.9rem + .2vw)

$loopShape: 51% 49% 52% 48% / 53% 38% 62% 47%

$innerShadow: inset 0 0 15px rgba(255, 255, 255, 0.5)

@keyframes bubble-wobble
  0%, 100%
    transform: scale(1) translate(0, 0)
  25%
    transform: scale(1.05) translate(2px, -4px) 
  50%
    transform: scale(1.1) translate(4px, -1px) 
  75%
    transform: scale(1.1) translate(4px, 2px) 

@keyframes gradient-animation
  0%
    background-position: 0% 0%
  50%
    background-position: 50% 50%
  100%
    background-position: 100% 100%

.fade-enter-active, .fade-leave-active
  transition: opacity 1.2s ease

.fade-enter-from, .fade-leave-to
  opacity: 0

*:focus
  outline: 1px dotted grey          

.router-link-active
  position: relative
  text-decoration: none
  &::after
    content: ''
    position: absolute
    bottom: -4px
    left: -10%
    width: 110%
    height: 4px
    background: linear-gradient(to right, transparent, $primaryColor, transparent)  
    transform: rotate(-1deg)                            

